Added burger menu to all pages

--- a/pages/product.html
+++ b/pages/product.html
@@ -32,31 +32,47 @@
           </div>
         </div>
         <div class="right__header">
-          <div class="nav__container">
-            <button class="burger">
-              <img src="../images/svg/burger-menu.svg" alt="burger menu" />
-            </button>
-            <!--  MAIN MENU WILL BE RIGHT HERE
-                <nav class="navigation">
-                  <ul class="main__menu">
-                    <li class="main__menu_item">
-                      <a href="" class="main__menu_link">item 1</a>
-                    </li>
-                    <li class="main__menu_item">
-                      <a href="" class="main__menu_link">item 2</a>
-                    </li>
-                    <li class="main__menu_item">
-                      <a href="" class="main__menu_link">item 3</a>
-                    </li>
-                    <li class="main__menu_item">
-                      <a href="" class="main__menu_link">item 4</a>
-                    </li>
-                    <li class="main__menu_item">
-                      <a href="" class="main__menu_link">item 5</a>
-                    </li>
+          <nav class="main__menu">
+            <input type="checkbox" name="menu" id="burger" />
+            <label for="burger"></label>
+            <div class="burger__menu">
+              <ul class="menu">
+                <li>
+                  <h3>Menu</h3>
+                </li>
+                <li>
+                  <span>Man</span>
+                  <ul class="submenu__man">
+                    <li>Accessories</li>
+                    <li>Bags</li>
+                    <li>Denim</li>
+                    <li>T-shirts</li>
                   </ul>
-                </nav> -->
-          </div>
+                </li>
+                <li>
+                  <span>Woman</span>
+                  <ul class="submenu__woman">
+                    <li>Accessories</li>
+                    <li>Jackets & Coats</li>
+                    <li>Polos</li>
+                    <li>T-Shirts</li>
+                    <li>Shirts</li>
+                  </ul>
+                </li>
+                <li>
+                  <span>Kids</span>
+                  <ul class="submenu__kids">
+                    <li>Accessories</li>
+                    <li>Jackets & Coats</li>
+                    <li>Polos</li>
+                    <li>T-Shirts</li>
+                    <li>Shirts</li>
+                    <li>Bags</li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </nav>
           <div class="user__profile">
             <a href="../pages/registration.html">
               <img src="../images/svg/user-profile.svg" alt="User icon" />
