--- a/pages/product.html
+++ b/pages/product.html
@@ -7,7 +7,6 @@
     <title>Online Store - Product</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/style.css" />
-    <script defer src="../js/main.js"></script>
   </head>
   <body>
     <header class="header">
@@ -25,8 +24,8 @@
                 alt="search loupe icon"
               />
             </button>
-            <div class="search__bar">
-              <input type="search" placeholder="Search..." required />
+            <div class="search__bar" style="display: none">
+              <input type="search" placeholder="Search..." />
               <button class="submit__btn" type="submit">Search</button>
             </div>
           </div>
@@ -239,7 +238,12 @@
               FOR OUR NEWLETTER AND PROMOTION
             </h3>
             <div class="subscribe__input">
-              <input type="email" placeholder="Enter Your Email" />
+              <input
+                type="email"
+                placeholder="Enter Your Email"
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                required
+              />
               <input type="submit" value="Subscribe" />
             </div>
           </div>
@@ -259,5 +263,6 @@
         </div>
       </div>
     </footer>
+    <script src="../js/main.js"></script>
   </body>
 </html>
